Overlap at width 1359 fixed

--- a/SiteAssets/RhyBus/Css/queries.css
+++ b/SiteAssets/RhyBus/Css/queries.css
@@ -19,7 +19,7 @@
     }
 }
 
-@media (max-width:1341px){
+@media (max-width:1359px){
     .divflexcolumn{
         flex-direction: column;
     }
